# shipment-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: cg_console.py  ui_streamlit.py
rules/: acme_imports.yaml  globex_trading.yaml
scripts/: generate_samples.py  reset.py  watch_inbox.py
src/: config.py  gemini_client.py  inbox.py  nl_query.py  orchestrator.py  schemas.py  shipment.py  storage.py
src/agents/: cross_validator.py  extractor.py  router.py  validator.py
tests/: test_cross_validator.py  test_extractor.py  test_inbox.py  test_nl_query.py  test_router.py  test_shipment_outcome.py  test_validator.py
